# fastapi

./: .gitignore  README.md  alembic.ini  conftest.py  main.py  pyproject.toml  settings.py
app/: auth_deps.py  deps.py  security.py  settings.py
app/models/: __init__.py  user.py
app/repositories/: authenticate.py  user.py
app/routers/: auth.py  users.py
app/schemas/: authenticate_schemas.py  user_schemas.py
app/services/: authenticate.py
app/value_objects/: data_time_sp.py  email.py  email_vo.py  password.py
infrastructure/: db_context.py
migrations/: env.py
migrations/versions/: 4bd7a67f45fd_create_user_table.py  c003f16a33d9_refactor_user_model_types.py
test/: conftest.py  test_app.py  test_login_validation.py  test_main.py  test_security.py
test/factories/: models.py
test/models/: test_user_model.py
test/repositories/: test_authenticate_repository.py  test_user_repository.py
test/routers/: test_auth.py  test_users.py
test/services/: test_authenticate_service.py
test/value_objects/: test_data_time_sp.py  test_email_vo.py  test_password_vo.py
